--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.80.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
